--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 <header>
     <h1>Je crée votre landing page professionnelle en 72h</h1>
     <p>Présence digitale simple, rapide et efficace.</p>
-    <a class="btn" href="#">Me contacter sur WhatsApp</a>
+    <a class="btn" href="https://wa.me/243891322351?text=Bonjour%20Justin,%20je%20veux%20une%20landing%20page%20professionnelle." target="_blank">
+    Me contacter sur WhatsApp
+</a>
+
 </header>
 
 <div class="section">
