--- a/index.html
+++ b/index.html
@@ -2,60 +2,111 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Landing Page Justin</title>
+    <title>Justin Kihundu | Création de Landing Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
             background: #f4f4f4;
+            color: #333;
             text-align: center;
         }
+
         header {
-            background: #111;
+            background: linear-gradient(135deg, #111, #333);
             color: white;
-            padding: 60px 20px;
+            padding: 80px 20px;
         }
+
         h1 {
-            margin: 0;
-            font-size: 32px;
+            font-size: 36px;
+            margin-bottom: 15px;
         }
+
         p {
             font-size: 18px;
         }
+
         .btn {
             display: inline-block;
-            margin-top: 20px;
-            padding: 15px 30px;
+            margin-top: 25px;
+            padding: 15px 35px;
             background: #25D366;
             color: white;
             text-decoration: none;
-            border-radius: 5px;
+            border-radius: 30px;
             font-weight: bold;
+            font-size: 16px;
+            transition: 0.3s;
         }
+
+        .btn:hover {
+            background: #1ebe5d;
+        }
+
         .section {
-            padding: 40px 20px;
+            padding: 60px 20px;
+            background: white;
+        }
+
+        .features {
+            max-width: 800px;
+            margin: auto;
+            line-height: 1.8;
+            font-size: 18px;
+        }
+
+        .price {
+            font-size: 28px;
+            font-weight: bold;
+            margin-top: 20px;
+            color: #111;
+        }
+
+        footer {
+            background: #111;
+            color: white;
+            padding: 30px 20px;
+            font-size: 14px;
         }
     </style>
 </head>
+
 <body>
 
 <header>
     <h1>Je crée votre landing page professionnelle en 72h</h1>
-    <p>Présence digitale simple, rapide et efficace.</p>
-    <a class="btn" href="https://wa.me/243891322351?text=Bonjour%20Justin,%20je%20veux%20une%20landing%20page%20professionnelle." target="_blank">
-    Me contacter sur WhatsApp
-</a>
+    <p>Présence digitale simple, rapide et efficace pour attirer vos clients.</p>
 
+    <a class="btn" href="https://wa.me/243891322351?text=Bonjour%20Justin,%20je%20veux%20une%20landing%20page%20professionnelle." target="_blank">
+        Me contacter sur WhatsApp
+    </a>
 </header>
 
 <div class="section">
     <h2>Pourquoi me choisir ?</h2>
-    <p>✔ Design moderne<br>
-       ✔ Adapté mobile<br>
-       ✔ Livraison rapide<br>
-       ✔ Prêt à convertir vos clients</p>
+    <div class="features">
+        ✔ Design moderne et professionnel<br>
+        ✔ 100% adapté mobile<br>
+        ✔ Livraison en 72h<br>
+        ✔ Optimisé pour convertir vos visiteurs<br>
+        ✔ Hébergement gratuit inclus
+    </div>
+
+    <div class="price">
+        Offre spéciale lancement : 50$
+    </div>
+
+    <a class="btn" href="https://wa.me/243891322351?text=Bonjour%20Justin,%20je%20veux%20profiter%20de%20l'offre%20de%2050$." target="_blank">
+        Commander maintenant
+    </a>
 </div>
+
+<footer>
+    © 2026 Justin Kihundu — Créateur de Landing Pages Professionnelles
+</footer>
 
 </body>
 </html>
